# VT2-corpusagent2

./: ..env.swp  .cloudflare_setup.txt.swp  .dockerignore  .env.example  .gitignore  CLAUDE.md  NEXT_STEPS_CLOUDFLARED_GITHUB_PAGES.txt  README.md  REPO_STATE_FOR_CHATGPT_PRO.md  claude_current_state.md  cloudflare_setup.txt  codex history.txt  corpusagent2_project_export_summary.md  deep-research-report.md  deep-research-report_current_State.md  download_e5.py  magic-box-first-trial-findings.md  magic_box_first_trial_findings.md  main.py  pyproject-Beast.toml  pyproject.toml  requirements-cu118.txt
.claude/: settings.local.json
config/: app_config.toml  benchmark_question_specs.json  faithfulness_claims.jsonl  framework_workload.jsonl  kpi_schema.json  retrieval_queries.jsonl  smoke_questions_10_rows.json
data/: README.md
deploy/: Dockerfile  Dockerfile.mcp  bake_dense_model.py  corpusagent2-api.service  corpusagent2-cloudflared.service  corpusagent2-stack.service  docker-compose.mcp.gpu.yml  docker-compose.mcp.yml  docker-compose.yml  requirements.docker-cpu.txt  requirements.docker-nlp-providers.txt  requirements.docker-torch-cpu.txt
docs/: deployment.md  masters_level_upgrade.md  mcp_job_server.md  paper_corpus_setup.md  repo_workflow.md  script_relationships.md
scripts/: 00_1_downlaod.py  00_stage_ccnews_files.py  01_prepare_dataset.py  02_build_retrieval_assets.py  03_evaluate_retrieval.py  04_evaluate_faithfulness.py  05_run_nlp_tooling.py  06_run_framework.py  07_mcp_server.py  08_review_retrieval.py  09_init_postgres_schema.py  10_ingest_parquet_to_postgres.py  11_build_pgvector_index.py  12_run_agent_api.py  13_write_frontend_config.py  14_run_static_frontend.py  15_start_local_stack.py  16_print_effective_config.py  17_download_provider_assets.py  18_verify_cuda118_env.py  19_rebuild_env_cuda118.ps1  19_rebuild_env_cuda118.sh  20_capability_provenance_probe.py  21_bulk_index_opensearch.py  22_prepare_vm_stack.py  23_start_cloudflared_tunnel.py  24_configure_vm_services.py  25_analyze_news_corpus.py  26_backfill_pgvector_embeddings.py  26_configure_docker_resources.py  27_build_prebuilt_bundle.py  28_restore_prebuilt_bundle.py  29_advise_slurm_submit.py  29_profile_corpus.py  31_run_mcp_server.py  32_repair_vm_retrieval_assets.py  33_prepare_full_stack.py  34_run_api_smoke_questions.py  35_backfill_run_history.py  bootstrap_ubuntu_vm.sh  (+2 more)
slurm/: 30_run_coding_agent.sbatch  coding_agent_prompt.md  coding_agent_runner.py  env_prep.txt  run_build_assets.sbatch  run_evaluation.sbatch  run_framework.sbatch  run_prebuilt_bundle.sbatch  run_prepare.sbatch  vt2_coding_agent_15751.err  vt2_coding_agent_15751.out  vt2_coding_agent_15752.err  vt2_coding_agent_15752.out  vt2_coding_agent_15753.err  vt2_coding_agent_15753.out  vt2_coding_agent_15759.err  vt2_coding_agent_15759.out
tests/: helpers.py  test_advise_slurm_submit.py  test_agent_backends.py  test_agent_capabilities.py  test_agent_executor.py  test_agent_models.py  test_agent_provider.py  test_agent_runtime.py  test_agent_runtime_live_plan_dag.py  test_api_smoke_questions.py  test_app_config.py  test_mcp_jobs.py  (+30 more)
(+105 files in other folders)
