[project]
name = "corpusagent2"
version = "0.1.0"
description = "Deterministic retrieval + NLP + verification stack for longitudinal news analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bertopic>=0.17.4",
    "joblib>=1.5.2",
    "matplotlib>=3.10.8",
    "mcp[cli]>=1.26.0",
    "networkx>=3.5",
    "numpy>=2.3.0",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.0",
    "sentence-transformers>=5.2.3",
    "spacy>=3.8.11",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]

[tool.uv]
package = true
