[project]
name = "corpusagent2"
version = "0.1.0"
description = "Deterministic retrieval + NLP + verification stack for longitudinal news analysis"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "bertopic>=0.17.4",
    "datasets>=4.7.0",
    "fastapi>=0.135.2",
    "huggingface-hub>=0.34.0,<1.0.0",
    "httpx>=0.28.1",
    "joblib>=1.5.2",
    "matplotlib>=3.10.8",
    "mcp[cli]>=1.26.0",
    "networkx>=3.5",
    "numpy>=1.26.4,<2.0.0",
    "pandas>=2.3.3",
    "psycopg[binary]>=3.2.12",
    "pytest>=9.0.2",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.0",
    "sentence-transformers>=5.2.3",
    "spacy>=3.8.11",
    "torch==2.3.1",
    "torchaudio==2.3.1",
    "torchvision==0.18.1",
    "transformers>=4.45.0,<5.0.0",
    "uvicorn>=0.41.0",
]

[project.optional-dependencies]
nlp-providers = [
    "flair>=0.15.1",
    "gensim>=4.3.3",
    "nltk>=3.9.1",
    "stanza>=1.11.0",
    "textacy>=0.13.0",
    "textblob>=0.19.0",
]

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }
torchvision = { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }
torchaudio = { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }
